[package]
name = "rendy"
version = "0.1.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/omni-viral/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy"
keywords = ["graphics", "gfx-hal", "rendy"]
description = "Higher-level graphics abstrations based on gfx-hal"
categories = ["rendering"]
readme = "../README.md"

[features]
empty = ["rendy-factory/empty", "rendy-graph/empty", "rendy-wsi/empty", "gfx-backend-empty"]
dx12 = ["rendy-factory/dx12", "rendy-graph/dx12", "rendy-wsi/dx12", "gfx-backend-dx12"]
metal = ["rendy-factory/metal", "rendy-graph/metal", "rendy-wsi/metal", "gfx-backend-metal"]
vulkan = ["rendy-factory/vulkan", "rendy-graph/vulkan", "rendy-wsi/vulkan", "gfx-backend-vulkan"]
serde-1 = ["gfx-hal/serde", "rendy-factory/serde-1", "rendy-mesh/serde-1", "rendy-texture/serde-1"]
no-slow-safety-checks = ["rendy-factory/no-slow-safety-checks", "rendy-wsi/no-slow-safety-checks", "rendy-util/no-slow-safety-checks"]
shader-compiler = ["rendy-shader/shader-compiler"]
spirv-reflection = ["rendy-shader/spirv-reflection", "rendy-graph/spirv-reflection" ]

command = ["rendy-command"]
factory = ["rendy-factory", "command", "resource", "wsi"]
frame = ["rendy-frame", "factory"]
graph = ["rendy-graph", "frame"]
memory = ["rendy-memory"]
mesh = ["rendy-mesh", "factory", "util"]
shader = ["rendy-shader", "factory"]
resource = ["rendy-resource", "memory"]
texture = ["rendy-texture", "factory", "util"]
util = ["rendy-util"]
wsi = ["rendy-wsi"]

base = ["shader-compiler", "spirv-reflection", "command", "factory", "frame", "graph", "memory", "mesh", "shader", "resource", "texture", "util", "wsi"]
default = ["base"]

mesh-obj = ["mesh", "rendy-mesh/obj"]
texture-image = ["texture", "rendy-texture/image"]
texture-palette = ["texture", "rendy-texture/palette"]

full = ["base", "mesh-obj", "texture-image", "texture-palette"]

[dependencies]
rendy-command = { version = "0.1.0", path = "../command", optional = true }
rendy-factory = { version = "0.1.0", path = "../factory", optional = true }
rendy-frame = { version = "0.1.0", path = "../frame", optional = true }
rendy-graph = { version = "0.1.0", path = "../graph", optional = true }
rendy-memory = { version = "0.1.0", path = "../memory", optional = true }
rendy-mesh = { version = "0.1.0", path = "../mesh", optional = true }
rendy-shader = { version = "0.1.0", path = "../shader", optional = true }
rendy-resource = { version = "0.1.0", path = "../resource", optional = true }
rendy-texture = { version = "0.1.0", path = "../texture", optional = true }
rendy-util = { version = "0.1.0", path = "../util", optional = true }
rendy-wsi = { version = "0.1.0", path = "../wsi", optional = true }

gfx-hal = "0.1"
gfx-backend-empty = { version = "0.1.0", optional = true }
gfx-backend-dx12 = { version = "0.1.0", optional = true }
gfx-backend-metal = { version = "0.1.0", optional = true }
gfx-backend-vulkan = { version = "0.1.0", optional = true }

[dev-dependencies]
genmesh = "0.6"
nalgebra = "0.16"
env_logger = "0.5"
failure = "0.1"
lazy_static = "1.0"
log = "0.4"
winit = "0.18"
palette = "0.4"
rand = "0.6"
