[package]
name = "rendy"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy"
keywords = ["graphics", "gfx-hal", "rendy"]
description = "Higher-level graphics abstrations based on gfx-hal"
categories = ["rendering"]
readme = "../README.md"

[features]
serde-1 = ["rendy-factory/serde-1", "rendy-mesh/serde-1", "rendy-texture/serde-1", "rendy-shader/serde-1", "rendy-util/serde-1"]

# Rendy subcrates
command = ["rendy-command"]
descriptor = ["rendy-descriptor"]
factory = ["rendy-factory", "command", "descriptor", "resource", "wsi"]
frame = ["rendy-frame", "factory"]
graph = ["rendy-graph", "frame"]
memory = ["rendy-memory"]
mesh = ["rendy-mesh", "factory"]
shader = ["rendy-shader", "factory"]
resource = ["rendy-resource", "memory"]
texture = ["rendy-texture", "factory"]
wsi = ["rendy-wsi"]

# Common util features
empty = ["rendy-util/gfx-backend-empty"]
dx12 = ["rendy-util/gfx-backend-dx12"]
metal = ["rendy-util/gfx-backend-metal"]
vulkan = ["rendy-util/gfx-backend-vulkan"]
no-slow-safety-checks = ["rendy-util/no-slow-safety-checks"]
profiler = ["thread_profiler/thread_profiler"]

# Base feature enables all subcrates
base = ["command", "descriptor", "factory", "frame", "graph", "memory", "mesh", "shader", "resource", "texture", "wsi"]

# Subcrate features relay.
mesh-obj = ["mesh", "rendy-mesh/obj"]
texture-image = ["texture", "rendy-texture/image"]
texture-palette = ["texture", "rendy-texture/palette"]
shader-compiler = ["rendy-shader/shader-compiler"]
spirv-reflection = ["rendy-shader/spirv-reflection" ]
wsi-winit = ["rendy-wsi/winit"]

# Full feature set - all listed features except rendy-util's.
full = ["base", "mesh-obj", "texture-image", "texture-palette", "spirv-reflection", "shader-compiler", "wsi-winit"]

# Default feature set includes all subcrates and few commonly used features.
default = [ "base", "shader-compiler", "spirv-reflection", "wsi-winit" ]

[dependencies]
rendy-command = { version = "0.4.0", path = "../command", optional = true }
rendy-descriptor = { version = "0.4.0", path = "../descriptor", optional = true }
rendy-factory = { version = "0.4.0", path = "../factory", optional = true }
rendy-frame = { version = "0.4.0", path = "../frame", optional = true }
rendy-graph = { version = "0.4.0", path = "../graph", optional = true }
rendy-memory = { version = "0.4.0", path = "../memory", optional = true }
rendy-mesh = { version = "0.4.0", path = "../mesh", optional = true }
rendy-shader = { version = "0.4.0", path = "../shader", optional = true }
rendy-resource = { version = "0.4.0", path = "../resource", optional = true }
rendy-texture = { version = "0.4.0", path = "../texture", optional = true }
rendy-util = { version = "0.4.0", path = "../util" }
rendy-wsi = { version = "0.4.0", path = "../wsi", optional = true }

failure = "0.1"
gfx-hal = "0.3"
thread_profiler = "0.3"

[dev-dependencies]
genmesh = "0.6"
nalgebra = "0.18"
env_logger = "0.6"
lazy_static = "1.0"
log = "0.4"
palette = "0.4"
rand = "0.7"

[[example]]
name = "triangle"
required-features = ["base", "wsi-winit"]

[[example]]
name = "sprite"
required-features = ["base", "texture-image", "wsi-winit"]

[[example]]
name = "meshes"
required-features = ["base", "wsi-winit"]

[[example]]
name = "quads"
required-features = ["base", "wsi-winit"]

[[example]]
name = "source_shaders"
required-features = ["base", "wsi-winit"]

[package.metadata.docs.rs]
features = ["full"]
