[package]
name = "rendy"
version = "0.5.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy"
keywords = ["graphics", "gfx-hal", "rendy"]
description = "Higher-level graphics abstrations based on gfx-hal"
categories = ["rendering"]
readme = "../README.md"

[features]
serde-1 = ["rendy-factory/serde-1", "rendy-mesh/serde-1", "rendy-texture/serde-1", "rendy-shader/serde-1", "rendy-core/serde-1"]

# Rendy subcrates
command = ["rendy-command"]
descriptor = ["rendy-descriptor"]
factory = ["rendy-factory", "command", "descriptor", "resource", "wsi"]
frame = ["rendy-frame", "factory"]
graph = ["rendy-graph", "frame"]
init = ["rendy-init"]
init-winit = ["rendy-init/winit"]
memory = ["rendy-memory"]
mesh = ["rendy-mesh", "factory"]
shader = ["rendy-shader", "factory"]
resource = ["rendy-resource", "memory"]
texture = ["rendy-texture", "factory"]
wsi = ["rendy-wsi"]

# Common core features
empty = ["rendy-core/empty"]
dx12 = ["rendy-core/dx12"]
gl = ["rendy-core/gl"]
metal = ["rendy-core/metal"]
vulkan = ["rendy-core/vulkan"]
no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]
profiler = ["thread_profiler/thread_profiler"]

# Base feature enables all subcrates
base = ["command", "descriptor", "factory", "frame", "graph", "init", "memory", "mesh", "shader", "resource", "texture", "wsi"]

# Subcrate features relay.
mesh-obj = ["mesh", "rendy-mesh/obj"]
texture-image = ["texture", "rendy-texture/image"]
texture-palette = ["texture", "rendy-texture/palette"]
shader-compiler = ["rendy-shader/shader-compiler"]
spirv-reflection = ["rendy-shader/spirv-reflection" ]

# Full feature set - all listed features except rendy-core's.
full = ["base", "mesh-obj", "texture-image", "texture-palette", "spirv-reflection", "shader-compiler"]

# Default feature set includes all subcrates and few commonly used features.
default = [ "base", "shader-compiler", "spirv-reflection" ]

[dependencies]
rendy-command = { version = "0.5.0", path = "../command", optional = true }
rendy-descriptor = { version = "0.5.0", path = "../descriptor", optional = true }
rendy-factory = { version = "0.5.0", path = "../factory", optional = true }
rendy-frame = { version = "0.5.0", path = "../frame", optional = true }
rendy-graph = { version = "0.5.0", path = "../graph", optional = true }
rendy-init = { version = "0.5.0", path = "../init", optional = true }
rendy-memory = { version = "0.5.0", path = "../memory", optional = true }
rendy-mesh = { version = "0.5.0", path = "../mesh", optional = true }
rendy-shader = { version = "0.5.0", path = "../shader", optional = true }
rendy-resource = { version = "0.5.0", path = "../resource", optional = true }
rendy-texture = { version = "0.5.0", path = "../texture", optional = true }
rendy-core = { version = "0.5.0", path = "../core" }
rendy-wsi = { version = "0.5.0", path = "../wsi", optional = true }

thread_profiler = "0.3"

[dev-dependencies]
genmesh = "0.6"
nalgebra = "0.18"
env_logger = "0.6"
lazy_static = "1.0"
log = "0.4"
palette = "0.4"
rand = "0.7"

[[example]]
name = "init"
required-features = ["base", "init-winit"]

[[example]]
name = "triangle"
required-features = ["base", "init-winit", "shader-compiler"]

[[example]]
name = "sprite"
required-features = ["base", "init-winit", "texture-image", "shader-compiler"]

[[example]]
name = "meshes"
required-features = ["base", "init-winit", "shader-compiler"]

[[example]]
name = "quads"
required-features = ["base", "init-winit", "shader-compiler"]

[[example]]
name = "source_shaders"
required-features = ["base", "init-winit", "shader-compiler"]

[package.metadata.docs.rs]
features = ["full"]
