[package]
name = "rendy-resource"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-resource"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's resource manager"

[features]
no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]

[dependencies]
crossbeam-channel = "0.4"
log = "0.4"
relevant = { version = "0.4", features = ["log"] }
rendy-descriptor = { version = "0.5.1", path = "../descriptor" }
rendy-memory = { version = "0.5.2", path = "../memory" }
rendy-core = { version = "0.5.1", path = "../core" }
smallvec = "1.2"
