[package]
name = "rendy-scheduler"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["vulkan"]
# empty = ["rendy-core/empty"]
# dx12 = ["rendy-core/dx12"]
# gl = ["rendy-core/gl"]
# metal = ["rendy-core/metal"]
# vulkan = ["rendy-core/vulkan"]
# no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]
# profiler = ["thread_profiler/thread_profiler"]

[dependencies]
# rendy-chain = { version = "0.5.1", path = "../chain" }
# rendy-command = { version = "0.5.1", path = "../command" }
# rendy-descriptor = { version = "0.5.1", path = "../descriptor" }
# rendy-factory = { version = "0.5.1", path = "../factory" }
# rendy-frame = { version = "0.5.1", path = "../frame" }
# rendy-memory = { version = "0.5.2", path = "../memory" }
# rendy-resource = { version = "0.5.1", path = "../resource" }
rendy-core = { version = "0.5.1", path = "../core" }
# rendy-wsi = { version = "0.5.1", path = "../wsi" }
# rendy-shader = { version = "0.5.1", path = "../shader" }

either = "1.5"
bitflags = "1.0"
log = "0.4"
relevant = { version = "0.4", features = ["log"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "1.0"
thread_profiler = "0.3"

bumpalo = { version = "3.2", features = ["collections"] }
cranelift-entity = "0.58"
cranelift_entity_set = { path = "../../../cranelift_entity_set" } #"0.3"

[dev-dependencies]
# rendy-init = { version = "0.5.1", path = "../init" }
simple_logger = "1.5.0"
