[package]
name = "rendy-shader"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>", "Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-shader"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's shader compilation tool"

[features]
shader-compiler = ["shaderc"]
spirv-reflection = [ "spirv-reflect" ]
serde-1 = ["serde", "serde_bytes"]

[dependencies]
smallvec = "0.6"
derivative = "1.0"
log = "0.4"
failure = "0.1"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
rendy-factory = { version = "0.4.0", path = "../factory" }
rendy-util = { version = "0.4.0", path = "../util" }
shaderc = { version = "0.6", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
spirv-reflect = { version = "0.2.1", optional = true }
