[package]
name = "rendy-shader"
version = "0.5.0"
authors = ["omni-viral <scareaangel@gmail.com>", "Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-shader"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's shader compilation tool"

[features]
shader-compiler = ["shaderc"]
spirv-reflection = [ "spirv-reflect" ]
serde-1 = ["serde", "rendy-core/serde-1"]

[dependencies]
smallvec = "0.6"
derivative = "1.0"
log = "0.4"
rendy-factory = { version = "0.5.0", path = "../factory" }
rendy-core = { version = "0.5.0", path = "../core" }
shaderc = { version = "0.6", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
spirv-reflect = { version = "0.2.1", optional = true }
