[package]
name = "rendy-texture"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-texture"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's texture"

[features]
no-slow-safety-checks = ["rendy-util/no-slow-safety-checks"]
serde-1 = ["serde", "gfx-hal/serde"]
profile = ["thread_profiler/thread_profiler"]

[dependencies]
rendy-memory = { version = "0.4.0", path = "../memory" }
rendy-resource = { version = "0.4.0", path = "../resource" }
rendy-factory = { version = "0.4.0", path = "../factory" }
rendy-util = { version = "0.4.0", path = "../util" }

gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }

derivative = "1.0"
serde = { version = "1.0", optional = true }
image = { version = "0.22.0", optional = true }
palette = { version = "0.4", optional = true }
log = "0.4"
thread_profiler = "0.3"
