[package]
name = "rendy-texture"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-texture"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's texture"

[features]
serde-1 = ["serde", "rendy-core/serde-1"]

[dependencies]
rendy-memory = { version = "0.5.2", path = "../memory" }
rendy-resource = { version = "0.5.1", path = "../resource" }
rendy-factory = { version = "0.5.1", path = "../factory" }
rendy-core = { version = "0.5.1", path = "../core" }
serde = { version = "1", optional = true }
image = { version = "0.22.0", optional = true }
palette = { version = "0.4", optional = true }
log = "0.4.11"
derivative = "2.2.0"
