[package]
name = "rendy-util"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-util"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's utilities"

[features]
empty = ["gfx-backend-empty"]
dx12 = ["gfx-backend-dx12"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]
no-slow-safety-checks = []
serde-1 = ["serde"]

[dependencies]
derivative = "1.0"
lazy_static = "1.0"
parking_lot = "0.7"
fnv = "1.0"
log = "0.4"
serde = { version = "1.0", optional = true, features = ["derive"] }
gfx-hal = { version = "0.2" }
gfx-backend-empty = { version = "0.2", optional = true }
gfx-backend-dx12  = { version = "0.2", optional = true }
gfx-backend-metal = { version = "0.2", optional = true }
gfx-backend-vulkan = { version = "0.2", optional = true }
