[package]
name = "rendy-util"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-util"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's utilities"

[features]
serde-1 = ["serde", "gfx-hal/serde"]

# This list of features is common for many of rendy's crates
# All other crates should transitively enable feature for rendy-util crate
# and not rely on the feature being enabled for that crate directly.
# To conditionally enable token trees `rendy-util::with_*` macro should be used instead of
# `cfg` attributes.
empty = ["gfx-backend-empty"]
dx12 = ["gfx-backend-dx12"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]
vulkan-x11 = ["gfx-backend-vulkan/x11"]
no-slow-safety-checks = []

[dependencies]
gfx-hal = "0.3"
gfx-backend-empty = { version = "0.3", features = ["winit"], optional = true }
gfx-backend-dx12 = { version = "0.3", features = ["winit"], optional = true }
gfx-backend-metal = { version = "0.3", features = ["winit"], optional = true }
gfx-backend-vulkan = { version = "0.3", features = ["winit"], optional = true }
derivative = "1.0"
lazy_static = "1.0"
log = "0.4"
parking_lot = "0.9"
serde = { version = "1.0", optional = true, features = ["derive"] }
thread_profiler = "0.3"
