[package]
name = "rendy-wsi"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-wsi"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's windowing support"

[features]
empty = ["rendy-util/empty"]
dx12 = ["rendy-util/dx12"]
metal = ["rendy-util/metal"]
vulkan = ["rendy-util/vulkan"]
no-slow-safety-checks = ["rendy-util/no-slow-safety-checks"]

[dependencies]
rendy-memory = { version = "0.4.0", path = "../memory" }
rendy-resource = { version = "0.4.0", path = "../resource" }
rendy-util = { version = "0.4.0", path = "../util" }

gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "a084a1f2fec6c9ed928c53e2dc8c1761782b9019" }
derivative = "1.0"
log = "0.4"
relevant = { version = "0.4", features = ["log", "backtrace"] }
smallvec = "0.6"
winit = { version = "0.20.0-alpha3", optional = true }
