[package]
name = "rendy-wsi"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-wsi"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's windowing support"

[features]
empty = ["rendy-core/empty"]
dx12 = ["rendy-core/dx12"]
# gl = ["rendy-core/gl"]
metal = ["rendy-core/metal"]
vulkan = ["rendy-core/vulkan"]

[dependencies]
rendy-memory = { version = "0.5.2", path = "../memory" }
rendy-resource = { version = "0.5.1", path = "../resource" }
rendy-core = { version = "0.5.1", path = "../core" }
log = "0.4.11"
relevant = { version = "0.4.2", features = ["log"] }
smallvec = "1.5.1"
