[package]
name = "ios-triangle"
version = "0.1.0"
edition = "2018"

[lib]
name = "ios_triangle"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
env_logger = "0.6"
rendy = { path = "../.." }
rendy-shader = { path = "../../../shader" }
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
lazy_static = "1.0"
log = "0.4"
